[package]
name = "sketch-wasm"
version = "0.1.0"
edition = "2021"
description = "Probabilistic data structures for TypeScript/Node.js via WebAssembly"
license = "MIT"
repository = "https://github.com/kchro3/sketch-wasm"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
rand_chacha = "0.3"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3"
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
