[package]
name = "sketch-wasm"
version = "0.1.2"
edition = "2021"
description = "Probabilistic data structures for TypeScript/Node.js via WebAssembly"
license = "MIT"
repository = "https://github.com/kchro3/sketch-wasm"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
rand_chacha = "0.3"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3"
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 0

[lints.rust]
unsafe_code = "warn"
missing_docs = "warn"
missing_debug_implementations = "warn"
missing_copy_implementations = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_imports = "warn"
unused_must_use = "warn"
unused_mut = "warn"
unused_variables = "warn"
